@@ -1,4 +1,7 @@
 %changelog
+* Tue Aug 31 2021 Jason Frey <fryguy9@gmail.com> - 14.0.0-1
+- Initial build of manageiq-release for Najdorf
+
 * Mon Feb 22 2021 Jason Frey <fryguy9@gmail.com> - 13.0.0-1
 - Initial build of manageiq for Morphy.
 
